fix: deduplicate same-position tokens and preserve offset gaps in sourceless reconstruction
When a Lucene token filter (e.g. word_delimiter_graph) produces a compound
token alongside its sub-tokens at the same Lucene position, all tokens were
stored individually in the sidecar and all returned by SidecarReader.get(),
yielding duplicates in the reconstructed source (e.g. '2000 09 2000 09').

Fix 1 — duplicate token deduplication (SidecarReader):
  At read time, group sidecar entries by Lucene position and keep only the
  longest token per group. The longest token is always the unsplit compound
  form; shorter co-positioned tokens are sub-word analysis artifacts that
  carry no extra character content.

Fix 2 — inter-token spacing (offset-gap reconstruction):
  The previous join used String.join(" ", terms) which collapsed all
  inter-token gaps to a single space. The sidecar now stores per-token
  character start/end offsets from Lucene's PostingsEnum.OFFSETS.
  LuceneLeafReader.joinWithOffsets() fills each gap with exactly
  (next.startOffset - prev.endOffset) spaces, preserving double-spaces and
  other original spacing. Falls back to single-space join when any token
  lacks offsets (fields not indexed with index_options: offsets).

Changes:
  - PostingsSink: add NO_OFFSET=-1 constant; new 6-arg accept() with
    startOffsets[]/endOffsets[] as primary method; old 4-arg accept() kept
    as default shim filling NO_OFFSET (backward compat).
  - SidecarBuilder: record format 12→20 bytes, adding startOff(4)+endOff(4)
    after existing (docId, pos, termId). DocPayloadEmitter writes ZInt-encoded
    offsets into the sidecar stream.
  - SidecarReader: new TermEntry record (term, startOffset, endOffset);
    get() now deduplicates by position keeping longest; getTermStrings()
    added for callers needing only strings.
  - SegmentTermIndex: getTermEntriesForDocument() returns List<TermEntry>;
    getTermsForDocument() delegates to it.
  - LuceneLeafReader: joinWithOffsets